lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:20: error: type mismatch;
 found   : Double
 required: Int
			pos = (sol(i).y)
                                      ^